--- a/src/main/resources/static/html/administrador/usuarios/gestionUsuarios.html
+++ b/src/main/resources/static/html/administrador/usuarios/gestionUsuarios.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="/css/administrativo/gestionUsuarios.css">
     <link rel="stylesheet" href="/css/index.css">
     <link rel="stylesheet" href="/css/administrativo/actualizarDatosUsuario.css">
+    <link rel="stylesheet" href="/css/administrativo/overlayUsuarios.css">
 </head>
 
 <body>
@@ -22,7 +23,7 @@
             </ul>
             <ul class="menu-perfil">
                 <li class="submenu">
-                    <a href="/html/perfil.html" class="enlace-perfil" id="inicio">
+                    <a href="/html/vistas/perfil.html" class="enlace-perfil" id="inicio">
                         <span id="sesion"></span>
                     </a>
                     <ul class="submenu-items">
@@ -70,9 +71,9 @@
         <div class="acciones">
             <div class="card">
                 <div id="overlay"></div>
-                <a href="#" class="btn" id="crear">Crear</a>
+                <a href="#" class="btn" id="link-trigger-post">Crear</a>
                 <a href="#" class="btn" id="link-trigger-update">Editar</a>
-                <a href="#" class="btn" id="bloquear">Bloquear</a>
+                <a href="#" class="btn" id="link-trigger-state">Estado</a>
                 <a href="#" class="btn" id="eliminar">Eliminar</a>
             </div>
         </div>
@@ -86,38 +87,38 @@
                     <div class="columna izquierda">
 
                         <label for="nombre">Nombre:</label>
-                        <input type="text" id="nombre" name="nombre" required>
+                        <input type="text" id="nombreUpdate" name="nombre" required>
 
                         <label for="apellido">Apellido:</label>
-                        <input type="text" id="apellido" name="apellido" required>
+                        <input type="text" id="apellidoUpdate" name="apellido" required>
 
                         <label for="documento">Documento:</label>
-                        <input type="text" id="documento" name="documento" required>
+                        <input type="text" id="documentoUpdate" name="documento" required>
 
                         <label for="email">Correo:</label>
-                        <input type="email" id="email" name="email" required>
+                        <input type="email" id="emailUpdate" name="email" required>
 
                         <label for="usuario">Usuario:</label>
-                        <input type="text" id="username" name="username" required>
+                        <input type="text" id="usernameUpdate" name="username" required>
 
                     </div>
 
                     <div class="columna derecha">
 
                         <label for="rol">Rol:</label>
-                        <input type="text" id="rol" name="rol" required>
+                        <input type="text" id="rolUpdate" name="rol" required>
 
                         <label for="cuenta">Número de cuenta:</label>
-                        <input type="text" id="cuenta" name="cuenta" required>
+                        <input type="text" id="cuentaUpdate" name="cuenta" disabled>
 
                         <label for="estado">Estado:</label>
-                        <input type="text" id="estado" name="estado" required>
+                        <input type="text" id="estadoUpdate" name="estado" disabled>
 
                         <label for="nacimiento">Fecha de nacimiento:</label>
-                        <input type="date" id="nacimiento" name="nacimiento" required>
+                        <input type="date" id="nacimientoUpdate" name="nacimiento" required>
 
                         <label for="password">Contraseña:</label>
-                        <input type="password" id="password" name="password" disabled>
+                        <input type="password" id="passwordUpdate" name="password" disabled>
 
                     </div>
 
@@ -130,13 +131,131 @@
                 <div id="resultadoUsuario" class="resultado"></div>
             </form>
 
+        </div>
+
+        <div id="overlay-state"></div>
+        <div id="menu-state" class="hidden-update">
+            <h2>Estado de usuario</h2>
+            <form id="ActualizarEstadoUsuario">
+
+                <div class="grupo-campos-usuario dos-columnas">
+
+                    <div class="columna izquierda">
+                        <label for="estado">Estado:</label>
+                        <select name="estado" id="estado">
+                            <option value="false">False</option>
+                            <option value="true" selected>True</option>
+                        </select>
+
+                        <label for="bloqueoTemporal">Bloqueo temporal:</label>
+                        <select name="bloqueoTemporal" id="bloqueoTemporal">
+                            <option value="false">False</option>
+                            <option value="true" selected>True</option>
+                        </select>
+                    </div>
+
+                </div>
+
+                <div class="boton-update">
+                    <button type="submit">Actualizar estado</button>
+                </div>
+
+                <div id="resultadoUsuario" class="resultado"></div>
+            </form>
+        </div>
+
+        <div id="overlay-post"></div>
+        <div id="menu-post" class="hidden-update">
+            <h2>Crear usuario</h2>
+            <form id="crearUsuario">
+                <div class="grupo-campos-usuario dos-columnas">
+
+                    <div class="columna izquierda">
+
+                        <label for="nombre">Nombre:</label>
+                        <input type="text" id="nombrePost" name="nombre" required>
+
+                        <label for="apellido">Apellido:</label>
+                        <input type="text" id="apellidoPost" name="apellido" required>
+
+                        <label for="documento">Documento:</label>
+                        <input type="text" id="documentoPost" name="documento" required>
+
+                        <label for="email">Correo:</label>
+                        <input type="email" id="emailPost" name="email" required>
+
+                        <label for="usuario">Usuario:</label>
+                        <input type="text" id="usernamePost" name="username" required>
+
+                        <label for="permisos">Rol:</label>
+                        <select name="estado" id="rolPost">
+                            <option value="false" selected disabled></option>
+                            <!--<option value="ADMIN">ADMIN</option>
+                            <option value="CLIENTE">ESTANDAR</option>-->
+                            <option value="ADMIN">ADMIN</option>
+                            <option value="CLIENTE">CLIENTE</option>
+                            <option value="EMPLEADO">EMPLEADO</option>
+                        </select>
+
+                    </div>
+
+                    <div class="columna derecha">
+
+                        <label for="cuenta">Número de cuenta:</label>
+                        <input type="text" id="cuentaPost" name="cuenta" disabled>
+
+                        <label for="estado">Estado:</label>
+                        <select name="estado" id="estadoPost">
+                            <option value="false" selected disabled></option>
+                            <option value="ACTIVA">ACTIVA</option>
+                            <option value="CERRADA">CERRADA</option>
+                            <option value="BLOQUEADA">BLOQUEADA</option>
+                        </select>
+
+                        <label for="nacimiento">Fecha de nacimiento:</label>
+                        <input type="date" id="nacimientoPost" name="nacimiento" required>
+
+                        <label for="password">Contraseña:</label>
+                        <input type="password" id="passwordPost" name="password">
+
+                        <label for="permisos">Permisos:</label>
+                        <select name="estado" id="permisoPost">
+                            <option value="false" selected disabled></option>
+                            <option value="ADMIN">ADMIN</option>
+                            <option value="CLIENTE">CLIENTE</option>
+                            <option value="EMPLEADO">EMPLEADO</option>
+                        </select>
+
+                    </div>
+
+                </div>
+
+                <div class="boton-update">
+                    <button type="submit">Crear usuario</button>
+                </div>
+
+
+
+                <div id="resultadoUsuario" class="resultado"></div>
+            </form>
+
+
 
         </div>
+
 
         <div id="resultado" class="resultado"></div>
     </main>
 
-
+    <div id="modal-eliminar" class="modal">
+        <div class="modal-content">
+            <p>¿Estás seguro de eliminar este usuario?</p>
+            <div class="acciones-modal">
+                <button id="confirmarEliminar" class="btn">Eliminar</button>
+                <button id="cancelarEliminar" class="btn">Cancelar</button>
+            </div>
+        </div>
+    </div>
 
     <footer>
         <p>© 2025 Sistema Financiero</p>
